{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 157,
  "lineage": "03f10b12-9965-5dc7-b494-7fa1338eeafd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-lab-trfm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e1d06225679bc1c5",
            "arn": "arn:aws:ec2:ap-south-1:211125648904:instance/i-02f40c552dc37c6a0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02f40c552dc37c6a0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-067d2f3519fb304fd",
            "private_dns": "ip-10-0-1-96.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.96",
            "public_ip": "13.201.117.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e2b9e56bb99d2372",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-071d01b5c7f1fdcf5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e17052e6ebffa056",
            "tags": {
              "Name": "My-inst-1"
            },
            "tags_all": {
              "Name": "My-inst-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-071d01b5c7f1fdcf5"
            ]
          },
          "dependencies": [
            "aws_security_group.my-sg-trfm",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.my-vpc-trfm",
            "data.template_file.setup-1",
            "data.template_file.setup-2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e1d06225679bc1c5",
            "arn": "arn:aws:ec2:ap-south-1:211125648904:instance/i-03b925b3918276ad5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03b925b3918276ad5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b7308f6a14ae41fb",
            "private_dns": "ip-10-0-2-127.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.127",
            "public_ip": "13.201.130.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-047b6883213cf9e23",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-071d01b5c7f1fdcf5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00b65ab40de28223a",
            "tags": {
              "Name": "My-inst-2"
            },
            "tags_all": {
              "Name": "My-inst-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-071d01b5c7f1fdcf5"
            ]
          },
          "dependencies": [
            "aws_security_group.my-sg-trfm",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.my-vpc-trfm",
            "data.template_file.setup-1",
            "data.template_file.setup-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125648904:internet-gateway/igw-094d7ea5b43db6ad2",
            "id": "igw-094d7ea5b43db6ad2",
            "owner_id": "211125648904",
            "vpc_id": "vpc-0587487bb155a6f66"
          },
          "dependencies": [
            "aws_vpc.my-vpc-trfm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:211125648904:loadbalancer/app/tf-lb-20240625023041361100000002/ded6e54ef1d1950d",
            "arn_suffix": "app/tf-lb-20240625023041361100000002/ded6e54ef1d1950d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20240625023041361100000002-2016619804.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:211125648904:loadbalancer/app/tf-lb-20240625023041361100000002/ded6e54ef1d1950d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20240625023041361100000002",
            "name_prefix": "tf-lb-",
            "preserve_host_header": false,
            "security_groups": [
              "sg-071d01b5c7f1fdcf5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00b65ab40de28223a"
              },
              {
                "subnet_id": "subnet-0e17052e6ebffa056"
              }
            ],
            "subnets": [
              "subnet-00b65ab40de28223a",
              "subnet-0e17052e6ebffa056"
            ],
            "tags": {
              "Name": "web-lb-trfm"
            },
            "tags_all": {
              "Name": "web-lb-trfm"
            },
            "vpc_id": "vpc-0587487bb155a6f66",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.my-sg-trfm",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.my-vpc-trfm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:211125648904:listener/app/tf-lb-20240625023041361100000002/ded6e54ef1d1950d/98685c80337b66a2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:211125648904:targetgroup/tf-20240625023041360000000001/97c568734e95b673",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:211125648904:listener/app/tf-lb-20240625023041361100000002/ded6e54ef1d1950d/98685c80337b66a2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:211125648904:loadbalancer/app/tf-lb-20240625023041361100000002/ded6e54ef1d1950d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.web-lb",
            "aws_lb_target_group.my-target-group",
            "aws_security_group.my-sg-trfm",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.my-vpc-trfm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:211125648904:targetgroup/tf-20240625023041360000000001/97c568734e95b673",
            "arn_suffix": "targetgroup/tf-20240625023041360000000001/97c568734e95b673",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:211125648904:targetgroup/tf-20240625023041360000000001/97c568734e95b673",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20240625023041360000000001",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "my-target-group-trfm"
            },
            "tags_all": {
              "Name": "my-target-group-trfm"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0587487bb155a6f66"
          },
          "dependencies": [
            "aws_vpc.my-vpc-trfm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lb-target-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:211125648904:targetgroup/tf-20240625023041360000000001/97c568734e95b673-20240625023128152600000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:211125648904:targetgroup/tf-20240625023041360000000001/97c568734e95b673",
            "target_id": "i-02f40c552dc37c6a0"
          },
          "dependencies": [
            "aws_instance.my-lab-trfm",
            "aws_lb_target_group.my-target-group",
            "aws_security_group.my-sg-trfm",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.my-vpc-trfm",
            "data.template_file.setup-1",
            "data.template_file.setup-2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:211125648904:targetgroup/tf-20240625023041360000000001/97c568734e95b673-20240625023128222800000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:211125648904:targetgroup/tf-20240625023041360000000001/97c568734e95b673",
            "target_id": "i-03b925b3918276ad5"
          },
          "dependencies": [
            "aws_instance.my-lab-trfm",
            "aws_lb_target_group.my-target-group",
            "aws_security_group.my-sg-trfm",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.my-vpc-trfm",
            "data.template_file.setup-1",
            "data.template_file.setup-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "my-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-094d7ea5b43db6ad2",
            "id": "r-rtb-05fb3b68f547dda621080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05fb3b68f547dda62",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_route_table.my-rt-1",
            "aws_vpc.my-vpc-trfm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-rt-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125648904:route-table/rtb-05fb3b68f547dda62",
            "id": "rtb-05fb3b68f547dda62",
            "owner_id": "211125648904",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-094d7ea5b43db6ad2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0587487bb155a6f66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_vpc.my-vpc-trfm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cb8ab8c4f3fc819",
            "route_table_id": "rtb-05fb3b68f547dda62",
            "subnet_id": "subnet-0e17052e6ebffa056"
          },
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_route_table.my-rt-1",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.my-vpc-trfm"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c6c0f8f31020d88",
            "route_table_id": "rtb-05fb3b68f547dda62",
            "subnet_id": "subnet-00b65ab40de28223a"
          },
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_route_table.my-rt-1",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.my-vpc-trfm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-sg-trfm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125648904:security-group/sg-071d01b5c7f1fdcf5",
            "description": "Allow SSH, HTTP and HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-071d01b5c7f1fdcf5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-sg-trfm",
            "name_prefix": "",
            "owner_id": "211125648904",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-sg-trfm-new"
            },
            "tags_all": {
              "Name": "my-sg-trfm-new"
            },
            "timeouts": null,
            "vpc_id": "vpc-0587487bb155a6f66"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125648904:subnet/subnet-0e17052e6ebffa056",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e17052e6ebffa056",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125648904",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0587487bb155a6f66"
          },
          "dependencies": [
            "aws_vpc.my-vpc-trfm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125648904:subnet/subnet-00b65ab40de28223a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b65ab40de28223a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125648904",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0587487bb155a6f66"
          },
          "dependencies": [
            "aws_vpc.my-vpc-trfm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc-trfm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125648904:vpc/vpc-0587487bb155a6f66",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02b44cac310556524",
            "default_route_table_id": "rtb-014a80d4f3d0cc2a4",
            "default_security_group_id": "sg-0c9fb852e89934848",
            "dhcp_options_id": "dopt-0c03d60e3d4e6768e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0587487bb155a6f66",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-014a80d4f3d0cc2a4",
            "owner_id": "211125648904"
          }
        }
      ]
    }
  ]
}